yoshimi 1.5.2 M

2017-6-11 Will
* Improved scales compatibility with old files/ versions.

2017-6-9 Will
* BugFix: miscMsgPop wasn't checking index range.
* Loading patch sets always zeros 'Solo' channel number.

2017-6-8 Will
* BugFix Loading scales wasn't updating name/comment.
* Direct access - more scales controls available.
* Direct access scale loading in place.

2017-6-7 Will
* Scales no longer suffer from cumulative errors :)
* Removed some (now unnecessary) mutex locks.
* Direct access tunings and keymaps now CSV,
  and reformatted to standard scales.

2017-6-5 Will
* Improved accuracy of scale number<=>text conversions.
* Added "Musical Scale.odf" to 'doc'.

2017-6-4 Will
* Tunings and Keyboard map implemented.
* Most Scales controls now available to direct access.
* Added new Scales.txt doc to 'dev_notes'
* Updated Yoshimi Control Numbers.ods file.

2017-6-3 Will
* Made Invert center key status clearer.
* Identified more scales controls ready for direct access.
* More doc updates.

2017-6-1 Will
* More part map optimisations.
* Part maps now double buffered.

2017-5-31 Will
* Reorganised part map setting to remove multiple calls.
* BugFix: Reverse scale centre was being set as type bool.
* BugFix: Scale ratio values were limited to 127.

2017-5-30 Will
* Improved error traps and reporting.
* Set default full XML saving to 'off'.
  Done for previous consistency.

2017-5-28 Will
* Revised Scales GUI layout.
* Added sane limits to key maps.
* Discovered XML saving anomaly so created new Config switch.
  Forces *all* data to be saved when set.
* dev_notes updates.

2017-5-26 Will
* Started implementation of CLI scales access.
* BugFix: neither .scl or .kbm were checked for no file :(

2017-5-24 Will
* BugFix: LV2 state restore was not setting partmaps.
* Yoshi can now work with both CLI and GUI disabled.
* Doc updates.

2017-5-12 Will
* Merged in Robs SubSynth Overtones/Legato fix.
* Finalised all code and docs for release.
* Set version 1.5.2
